Fixed spacing.

--- a/app/assets/stylesheets/pages/_signupform.scss
+++ b/app/assets/stylesheets/pages/_signupform.scss
@@ -8,6 +8,7 @@
 .signup-title {
   color: white;
   margin-top: 1.5rem;
+  margin-bottom: -15px;
 }
 
 .signup-title h4 {
